<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:background="@color/white"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registration_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginLeft="11dp"
        android:gravity="top"
        android:text="@string/registration"
        android:textAppearance="@style/text_style_h2"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent" />
    
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surname_TextInput"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:hint="@string/surname"
                android:textColorHint="@color/medium_grey"
                app:boxBackgroundColor="@color/grey"
                app:boxStrokeWidth="0dp"
                app:hintTextAppearance="@style/text_style_input_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_TextInput"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:layout_marginLeft="6dp"
                android:hint="@string/name"
                android:textColorHint="@color/medium_grey"
                app:boxBackgroundColor="@color/grey"
                app:boxStrokeWidth="0dp"
                app:hintTextAppearance="@style/text_style_input_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/surname_TextInput"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/patronymic_TextInput"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:layout_marginRight="6dp"
                android:hint="@string/patronymic"
                android:textColorHint="@color/medium_grey"
                app:boxBackgroundColor="@color/grey"
                app:boxStrokeWidth="0dp"
                app:hintTextAppearance="@style/text_style_input_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/surname_TextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="5dp">
                <Button
                    android:id="@+id/man_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="35dp"
                    android:layout_marginLeft="6dp"
                    android:gravity="center"
                    android:text="@string/man"
                    android:textAppearance="@style/text_style_menu"
                    android:textColor="@color/dark_grey"
                    app:layout_constraintStart_toEndOf="@id/patronymic_TextInput"
                    app:layout_constraintTop_toBottomOf="@id/name_TextInput" />

                <Button
                    android:id="@+id/woman_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="35dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:text="@string/woman"
                    android:textAppearance="@style/text_style_menu"
                    android:textColor="@color/medium_grey"
                    app:layout_constraintStart_toEndOf="@id/man_button"
                    app:layout_constraintTop_toBottomOf="@id/name_TextInput" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_TextInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:textColorHint="@color/medium_grey"
        app:boxBackgroundColor="@color/grey"
        app:boxStrokeWidth="0dp"
        app:hintTextAppearance="@style/text_style_input_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_TextInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:hint="@string/phone"
        android:textColorHint="@color/medium_grey"
        app:boxBackgroundColor="@color/grey"
        app:boxStrokeWidth="0dp"
        app:hintTextAppearance="@style/text_style_input_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_TextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_password_TextInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:hint="@string/create_password"
        android:textColorHint="@color/medium_grey"
        app:boxBackgroundColor="@color/grey"
        app:boxStrokeWidth="0dp"
        app:hintTextAppearance="@style/text_style_input_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_TextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeat_password_TextInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:hint="@string/repeat_password"
        android:textColorHint="@color/medium_grey"
        app:boxBackgroundColor="@color/grey"
        app:boxStrokeWidth="0dp"
        app:hintTextAppearance="@style/text_style_input_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_password_TextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/i_am_18_checkBox"
        android:layout_marginTop="30dp"
        android:layout_width="180dp"
        android:gravity="top"
        android:layout_height="20dp"
        android:button="@drawable/checkbox_selector"
        android:text="@string/i_am_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_password_TextInput" />

    <CheckBox
        android:id="@+id/want_notif_checkBox"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:paddingTop="0dp"
        android:gravity="top"
        android:button="@drawable/checkbox_selector"
        android:text="@string/want_receive_notif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/i_am_18_checkBox" />

    <CheckBox
        android:id="@+id/informed_agreed_checkBox"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:paddingTop="0dp"
        android:gravity="top"
        android:button="@drawable/checkbox_selector"
        android:text="@string/informed_agreed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/want_notif_checkBox" />

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="156dp"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/not_very_round_corners_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/informed_agreed_checkBox">

        <Button
            android:id="@+id/enter_by_login_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="41dp"
            android:text="@string/to_continue"
            android:textAppearance="@style/text_style_menu"
            android:textColor="@color/white"
            android:gravity="bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>