<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".FirstEntryActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="185dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:text="@string/welcome_in_mitra"
        android:textAppearance="@style/text_style_h0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="66dp"
        android:background="@drawable/ic_close"
        android:cropToPadding="false"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/not_very_round_corners_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/enter_by_login_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="25dp"
            android:text="@string/enter_by_login"
            android:textAppearance="@style/text_style_menu"
            android:textColor="@color/dark_grey"
            android:gravity="bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/or_text"
        android:layout_width="28dp"
        android:layout_height="16dp"
        android:layout_marginTop="30dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/or"
        android:textAppearance="@style/text_style_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1" />

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/not_very_round_corners_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_text">

        <Button
            android:id="@+id/enter_by_vk_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:text="@string/enter_by_vk"
            android:textAppearance="@style/text_style_menu"
            android:textColor="@color/dark_grey"
            app:icon="@drawable/ic_vk"
            app:iconSize="20dp"
            app:iconTint="@color/dark_grey"
            android:gravity="bottom"
            app:iconPadding="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/not_very_round_corners_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll2">

        <Button
            android:id="@+id/enter_by_google_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:text="@string/enter_by_google"
            android:textAppearance="@style/text_style_menu"
            android:textColor="@color/dark_grey"
            app:icon="@drawable/ic_google"
            app:iconSize="20dp"
            app:iconTint="@color/dark_grey"
            android:gravity="bottom"
            app:iconPadding="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="142dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:gravity="bottom"
        android:padding="1dp"
        android:text="@string/do_you_have_account"
        android:textAppearance="@style/text_style_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll3" />

    <Button
        android:id="@+id/create_account_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:gravity="bottom"
        android:paddingLeft="1dp"
        android:text="@string/lets_create_it"
        android:textAppearance="@style/text_style_menu"
        android:textColor="@color/dark_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/grey"
        app:menu="@menu/bottom_nav_menu"
        app:itemTextColor="@color/grey"
        app:itemActiveIndicatorStyle="@color/grey"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>