<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginEntryActivity"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/entry_in_account_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginLeft="11dp"
        android:gravity="top"
        android:text="@string/entry_in_account"
        android:textAppearance="@style/text_style_h2"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/ic_close"
        android:cropToPadding="false"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_TextInputL"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:hint="@string/your_login"
        android:textColorHint="@color/medium_grey"
        app:boxBackgroundColor="@color/grey"
        app:boxStrokeWidth="0dp"
        app:hintTextAppearance="@style/text_style_input_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_in_account_textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_TextInputL"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="11dp"
        android:hint="@string/your_password"
        android:textColorHint="@color/medium_grey"
        app:boxBackgroundColor="@color/grey"
        app:boxStrokeWidth="0dp"
        app:hintTextAppearance="@style/text_style_input_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_TextInputL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginLeft="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="156dp"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/not_very_round_corners_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_TextInputL">

        <Button
            android:id="@+id/enter_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enter"
            android:textAppearance="@style/text_style_menu"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <Button
        android:id="@+id/forget_login_password_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="bottom"
        android:paddingLeft="6dp"
        android:text="@string/forget_login_or_password"
        android:textAppearance="@style/text_style_info"
        android:textColor="@color/dark_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1" />




</androidx.constraintlayout.widget.ConstraintLayout>